--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -1,5 +1,5 @@
 <div [@routerTransition] [dir]="rtl">
-    <h4 class="text-center mb-3">{{ "LogIn" | localize }}</h4>
+    <h4 class="text-center mb-3">بيانات الدخول للنظام</h4>
     <form novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()">
         <div class="form-group">
             <div class="input-group-login">
