--- a/angular/src/app/requests/request-create/request-create.component.html
+++ b/angular/src/app/requests/request-create/request-create.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <h1>{{ "Create" | localize }}</h1>
+                    <h1>{{ "AddRequest" | localize }}</h1>
                 </div>
             </div>
         </div>
@@ -17,48 +17,105 @@
                     <form class="form-horizontal"
                           autocomplete="off"
                           #createRequestForm="ngForm"
-                          (ngSubmit)="save()">
+                          (ngSubmit)="save(1)">
 
 
                         <div class="row">
 
-                        
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "ChooseProject" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="project" (ngModelChange)="LoadProject($event)" [disabled]="request.id>0"
+                                            class="form-control"
+                                            id="project" [(ngModel)]="request.projectId"
+                                            #projectModel="ngModel"
+                                            #project required>
+                                        <option *ngFor="let project of projects" [value]="project.id">{{project.name}}</option>
+                                    </select>
+                                    <abp-validation-summary [control]="projectModel"
+                                                            [controlEl]="project"></abp-validation-summary>
+                                </div>
+                            </div>
+
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="Name">
-                                    {{ "Name" | localize }}
+                                    {{ "ProjectName" | localize }}
                                 </label>
                                 <div class="col-md-9">
-                                    <input type="text" [disabled]="request.id>0"
-                                           class="form-control"
-                                           name="name"
-                                           id="name"
-                                           required
+                                    <input type="text"
+                                           class="form-control" disabled
+                                           name="projectname"
+                                           id="projectname"
                                            maxlength="32"
-                                           [(ngModel)]="request.name"
-                                           #nameModel="ngModel"
-                                           #nameE1 />
-                                    <abp-validation-summary [control]="nameModel"
-                                                            [controlEl]="nameE1"></abp-validation-summary>
+                                           [(ngModel)]="projectName"
+                                           #projectnameModel="ngModel"
+                                           #projectnameE1 />
+                                    <abp-validation-summary [control]="projectnameModel"
+                                                            [controlEl]="projectnameE1"></abp-validation-summary>
                                 </div>
                             </div>
+
+
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
-                                    {{ "Code" | localize }}
+                                    {{ "ContractNumber" | localize }}
                                 </label>
                                 <div class="col-md-9">
-                                    <input type="text" [disabled]="request.id>0"
-                                           class="form-control"
-                                           name="code"
-                                           id="code"
-                                           required
+                                    <input type="text"
+                                           class="form-control" disabled
+                                           name="projectContractNumber"
+                                           id="projectContractNumber"
                                            maxlength="32"
-                                           [(ngModel)]="request.code"
-                                           #codeModel="ngModel"
-                                           #codeE1 />
-                                    <abp-validation-summary [control]="codeModel"
-                                                            [controlEl]="codeE1"></abp-validation-summary>
+                                           [(ngModel)]="projectContractNumber" />
+                                    <!--<abp-validation-summary [control]="contractNumberModel"
+                                        [controlEl]="contractNumber"></abp-validation-summary>-->
                                 </div>
                             </div>
+
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "StartDate" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <input type="date"
+                                           class="form-control" disabled
+                                           name="startDate"
+                                           id="startDate"
+                                           style="text-align: right;"
+                                           maxlength="32"
+                                           [(ngModel)]="startDatemodel"
+                                           #startDateModel="ngModel"
+                                           #startDate />
+                                    <abp-validation-summary [control]="startDateModel"
+                                                            [controlEl]="startDate"></abp-validation-summary>
+                                </div>
+                            </div>
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "EndProject" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <input type="date"
+                                           class="form-control" disabled
+                                           style="text-align: right;"
+                                           name="completeDate"
+                                           id="completeDate"
+                                           maxlength="32"
+                                           [(ngModel)]="completeDatemodel"
+                                           #completeDateModel="ngModel"
+                                           #completeDate />
+                                    <abp-validation-summary [control]="completeDateModel"
+                                                            [controlEl]="completeDate"></abp-validation-summary>
+                                </div>
+                            </div>
+
+
+
+
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
@@ -79,7 +136,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6">
+                            <div class="form-group row  col-6">
                                 <label class="col-md-3 col-form-label" for="Description">
                                     {{ "Description" | localize }}
                                 </label>
@@ -88,7 +145,6 @@
                                            class="form-control"
                                            name="description"
                                            id="description"
-                                           required
                                            maxlength="32"
                                            [(ngModel)]="request.description"
                                            #descriptionModel="ngModel"
@@ -98,22 +154,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6">
-                                <label class="col-md-3 col-form-label" for="ADDRESS">
-                                    {{ "ChooseProject" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <select name="project" [disabled]="request.id>0"
-                                            class="form-control"
-                                            id="project" [(ngModel)]="request.projectId"
-                                            #projectModel="ngModel"
-                                            #project required>
-                                        <option *ngFor="let project of projects" [value]="project.id">{{project.name}}</option>
-                                    </select>
-                                    <abp-validation-summary [control]="projectModel"
-                                                            [controlEl]="project"></abp-validation-summary>
-                                </div>
-                            </div>
+
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="DistrictName">
@@ -153,7 +194,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6">
+                            <div class="form-group row  col-6">
                                 <label class="col-md-3 col-form-label" for="DistrictName">
                                     {{ "PhoneNumberSiteResponsible2" | localize }}
                                 </label>
@@ -162,7 +203,6 @@
                                            class="form-control"
                                            name="phomeNumberSiteResponsibleTwo"
                                            id="phomeNumberSiteResponsibleTwo"
-                                           required
                                            maxlength="32"
                                            [(ngModel)]="request.phomeNumberSiteResponsibleTwo"
                                            #phomeNumberSiteResponsibleTwoModel="ngModel"
@@ -172,22 +212,22 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6">
-                                <label class="col-md-3 col-form-label" for="ADDRESS">
-                                    {{ "MainRequestTypes" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <select name="mainRequestType" [disabled]="request.id>0"
-                                            class="form-control"
-                                            id="mainRequestType" [(ngModel)]="request.mainRequestType"
-                                            #mainRequestTypeModel="ngModel"
-                                            #mainRequestType required>
-                                        <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
-                                    </select>
-                                    <abp-validation-summary [control]="mainRequestTypeModel"
-                                                            [controlEl]="mainRequestType"></abp-validation-summary>
-                                </div>
-                            </div>
+                            <!--<div class="form-group row required col-6">
+            <label class="col-md-3 col-form-label" for="ADDRESS">
+                {{ "MainRequestTypes" | localize }}
+            </label>
+            <div class="col-md-9">
+                <select name="mainRequestType" [disabled]="request.id>0"
+                        class="form-control"
+                        id="mainRequestType" [(ngModel)]="request.mainRequestType"
+                        #mainRequestTypeModel="ngModel"
+                        #mainRequestType required>
+                    <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
+                </select>
+                <abp-validation-summary [control]="mainRequestTypeModel"
+                                        [controlEl]="mainRequestType"></abp-validation-summary>
+            </div>
+        </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="isLabTest">
@@ -227,13 +267,20 @@
                                 [disabled]="!createRequestForm.form.valid || saving"
                                 class="btn btn-primary"
                                 aria-label="Close">
-                            {{ saveText | localize }}
+                            {{ "Save" | localize }}
                         </button>
 
                         <button *ngIf="request.id>0" type="submit"
-                                [disabled]="requestTests.length==0"
+                                [disabled]="saving"
                                 class="btn btn-primary"
                                 aria-label="Close">
+                            {{ "Save" | localize }}
+                        </button>
+
+                        <button *ngIf="request.id>0" type="button"
+                                [disabled]="requestTests.length==0"
+                                class="btn btn-primary mr-5"
+                                aria-label="Close" (click)="save(2)">
                             {{ "SendToConsultant" | localize }}
                         </button>
                     </form>
@@ -300,7 +347,6 @@
                                     <td>{{ requestTest.code }}</td>
                                     <td>{{ requestTest.cost}}</td>
                                     <td>
-
                                         <button type="button"
                                                 class="btn btn-sm bg-danger mx-2"
                                                 (click)="delete(requestTest)">
